trying to fix alignment

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -115,8 +115,11 @@ h3{
 	text-align: center;
 	color: #e67e22;
 	font-size: 120%;
+
+	/*secret alignment techniques*/
 	line-height: 120%;
 	vertical-align: middle;
+	margin-top: -2px;
 }
 
 
